added controller, error handler, database project and tests for the customerservice class

--- a/AnimalFriends/AnimalFriends.Api/AnimalFriends.Api.csproj
+++ b/AnimalFriends/AnimalFriends.Api/AnimalFriends.Api.csproj
@@ -5,7 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.14" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AnimalFriends.Core\AnimalFriends.Core.csproj" />
   </ItemGroup>
 
 
