--- a/AnimalFriends/AnimalFriends.Api/appsettings.json
+++ b/AnimalFriends/AnimalFriends.Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=Database1;Trusted_Connection=True;" // would use the secret manager to store this normally.
+  }
 }
